--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,14 +1,14 @@
-@media screen and (max-width: 480px) {
-  h2 {
-    font-size: 2em;
-  }
+@media screen and (min-width: 480px) {
+  
+}
 
-  div.introduction {
-    font-size: 1em;
-    max-width: 100%;
-  }
+@media screen and (min-width: 768px) {
+	.skill {
+		width: 150px;
+		height: 150px;
+	}
 
-  body {
-    background-size: 100px 100px;
-  }
+	.skill_banner {
+		line-height: 150px;
+	}
 }
