--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body p, ol li {
 	font-size: 1.2rem;
 }
 
-h1, h2 {
+h1, h2, h3 {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	font-family: 'Permanent Marker', sans-serif;
@@ -28,8 +28,12 @@ a {
 	cursor: pointer;
 }
 
+/* TODO make a proper image file */
 .home_container, .about_me_container, .skills_container, .portfolio_container, .contact_me_container {
-	border-top: solid 3px #000;
+	-webkit-border-image: url(scribbled_border.svg) 33% round; /* Safari 3.1-5 */
+    -o-border-image: url(scribbled_border.svg) 33% round;
+	border-image: url(scribbled_border.svg) 33%  round;
+	border-top: solid 30px transparent;
 }
 
 /********************** Navigation section **********************/
@@ -257,7 +261,7 @@ a {
 	animation-duration: 5s;
 }*/
 
-/************************* Work section *************************/
+/************************* Portfolio section *************************/
 
 .portfolio_thumbnails_container {
 	display: flex;
@@ -265,25 +269,146 @@ a {
 	flex-wrap: wrap;
 }
 
-.thumbnail {
-	width: 100px;
-	height: 100px;
-	border: 1px solid #000;
-	border-radius: 50px 5px 50px 5px;
+.project_container {
+	width: 300px;
 	margin: 10px 20px;
 }
 
-.thumbnail:hover {
-	background: linear-gradient(
-		rgba(255, 0, 0, 0.45), 
-      	rgba(255, 0, 0, 0.45), url("../img/ReThree_screen.png"));
-
+.project_container h3 {
+	margin: 10px auto 5px auto;
+	text-decoration: underline;
 }
+
+.project_container p {
+	margin-top: 10px; 
+	width: 100%;
+}
+
+#read_more {
+	text-align: center;
+}
+
+.thumbnail_container {
+	width: 300px;
+	height: 300px;
+	border: 1px solid #000;
+	border-radius: 50px 5px 50px 5px;
+	/*margin: 10px 20px;*/
+	background-size: 300px 300px;
+	position: relative;
+}
+
+.rethree_image {
+	background-image: url("../img/ReThree_screen.png");
+}
+
+/* TODO add this image */
+.baremedium_image {
+	background-image: url("../img/BareMedium_screen.png");	
+}
+
+.dashed_border {
+	border-style: dashed;
+}
+
+div.project_skill {
+	position: absolute;
+	background-color: #000000;
+	border-radius: 1em;
+	z-index: 2;
+	border: solid 1px #000000;
+	color: #ffffff;
+	right: 0;
+	left: 0;
+	margin-left: 25px;
+	margin-right: 25px;
+	font-size: 1.5em;
+}
+
+/*div.project_skill:nth-child(1){
+	top: 30px;
+}
+
+div.project_skill:nth-child(2){
+	top: 50px;
+}
+
+div.project_skill:nth-child(3){
+	top: 70px;
+}
+
+div.project_skill:nth-child(4){
+	top: 90px;}
+
+div.project_skill:nth-child(5){
+	top: 110px;
+}
+
+div.project_skill:nth-child(6){
+	top: 130px;
+}*/
+
+div.project_skill:nth-child(1){
+	top: 30px;
+}
+
+div.project_skill:nth-child(2){
+	top: 81px;
+}
+
+div.project_skill:nth-child(3){
+	top: 132px;
+}
+
+div.project_skill:nth-child(4){
+	top: 183px;
+}
+
+div.project_skill:nth-child(5){
+	top: 234px;
+}
+
+/* Handles making the background color change on hover */
+div.thumbnail {
+	width: 300px;
+	height: 300px;
+	border-radius: 50px 5px 50px 5px;
+	margin: -1px 0 0 -1px;
+	background-size: 300px 300px;
+	background-color: transparent;
+	opacity: 0.5;
+}
+
+/* Only for the coming soon projects. */
+div.coming_soon .thumbnail {
+ 	opacity: 1.0;
+ 	padding: 135px 0;
+ 	border: transparent;
+}
+
+div.thumbnail p{
+	background-color: #ffffff;
+	display: inline;
+}
+
+.coming_soon .thumbnail p {
+	font-size: 3rem;
+}
+/* TODO need to change these colors to match the theme of the site*/
+/*div.thumbnail:hover {
+	background-color: #ff0000;
+	opacity: 0.5;
+}*/
+
+/*.project_container:nth-child(2n) div.thumbnail:hover {
+	background-color: #0000ff;
+}*/
 
 /********************** Contact Me section **********************/
 
 .contact_me_container {
 	padding-bottom: 30px;
+	padding: 30px;
 }
 
 .contact_me_container > p {
@@ -316,6 +441,10 @@ a {
 
 .contact_links a {
 	text-decoration: none;
+}
+
+.contact_links ul {
+	text-align: center;
 }
 
 /********************** Footer section **********************/
