--- a/css/index.css
+++ b/css/index.css
@@ -284,6 +284,11 @@ a {
 	width: 100%;
 }
 
+/* Make all of the links red inside of the p. */
+.brief_description a {
+	color: red;
+}
+
 #read_more {
 	text-align: center;
 }
