--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,19 @@
 
 }
 
+@media screen and (min-width: 535px) {
+	/*** Skills ***/
+	.border_skill {
+		width: 100px;
+		height: 100px;
+	}
+
+	.skill_banner {
+		line-height: 100px;
+		font-size: 1.1em;
+	}
+}
+
 @media screen and (min-width: 590px) {
 	/*** General ***/
 	body p, ol li {
@@ -62,13 +75,14 @@
 	    font-size: 1.8rem;
     }
 	/*** Skills ***/
-	.skill {
+	.border_skill {
 		width: 125px;
 		height: 125px;
 	}
 
 	.skill_banner {
 		line-height: 125px;
+		font-size: 1.2em;
 	}
 }
 
@@ -138,13 +152,19 @@
 	}
 	
 	/*** Skills ***/
-	.skill {
+	.border_skill {
 		width: 150px;
 		height: 150px;
 	}
 
 	.skill_banner {
 		line-height: 150px;
+		font-size: 1.4em;
+	}
+
+	/*** Contact ***/
+	.form-group label {
+		font-size: 1.6rem;
 	}
 
 	/*** Footer ***/
@@ -156,7 +176,7 @@
 @media screen and (min-width: 990px) {
 	/* General */
 	body p, ol li {
-		/*font-size: 2.0rem;*/
+		font-size: 1.7rem;
 	}
 
 	.home_container h1 {
@@ -181,9 +201,15 @@
 		padding: 0 10%;
 	}
 
+	.border_skill {
+		width: 175px;
+		height: 175px;
+	}
+
 	/*** Skills ***/
 	.skill_banner {
-		font-size: 1.2em;
+		font-size: 1.6em;
+		line-height: 175px;
 	}
 
 	/*** Contact Me ***/
@@ -202,6 +228,17 @@
 	/*** About Me ***/
 	p.intro {
 		padding: 0 15%;
+	}
+
+	.border_skill {
+		width: 200px;
+		height: 200px;
+	}
+
+	/*** Skills ***/
+	.skill_banner {
+		font-size: 1.8em;
+		line-height: 200px;
 	}
 
 	/*** Portfolio Work ***/
@@ -249,6 +286,17 @@
 	/*** About Me ***/
 	p.intro {
 		padding: 0 18%;
+	}
+
+	.border_skill {
+		width: 225px;
+		height: 225px;
+	}
+
+	/*** Skills ***/
+	.skill_banner {
+		font-size: 2em;
+		line-height: 225px;
 	}
 
 	/*** Portfolio Work ***/
