--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,7 @@ a {
 }
 
 .navbar-inverse .navbar-nav > li:nth-child(2n).active > a, .navbar-inverse .navbar-nav > li:nth-child(2n).active > a:focus, .navbar-inverse .navbar-nav > li:nth-child(2n).active > a:hover {
-	background-color: rgb(196, 0, 16)rgb(32, 72, 149);
+	background-color: rgb(32, 72, 149);
 }
 
 .navbar-fixed-top {
@@ -173,10 +173,14 @@ img.logo {
 
 /************************ Skills section ************************/
 
-/*.skills_container {
-	color: #fff;
-	background-color: #222;
-}*/
+.skills_container {
+	/*color: #fff;
+	background-color: #222;*/
+	/*position: relative;*/
+}
+.skills_outer {
+
+}
 
 .skill_shell {
 	width: 33.333%;
@@ -184,6 +188,7 @@ img.logo {
 	float: left;
 	margin-bottom: 20px;
 	margin-top: 20px;
+	/*position: absolute;*/
 }
 
 .border_skill {
@@ -192,14 +197,69 @@ img.logo {
 	height: 75px;
 	width: 75px;
 	margin: 0 auto;
+	position: relative;
 }
 
-.skill_shell:nth-child(2n) .border_skill{
+#java {
+	display: inline;
+	position: absolute;
+	right: 8px;
+	/*animation-name: rotate_java;
+	animation-timing-function: linear;
+	animation-duration: 5s;*/
+	/*transform: rotate(120deg);*/
+	/*-webkit-transform: rotate(120deg);*/
+}
+
+.spin {
+	animation-name: blink_life;
+	animation-timing-function: linear;
+	animation-duration: 0.7s;
+	animation-fill-mode: forwards;
+}
+
+.skill_blink {
+	animation-name: blink_life;
+	animation-timing-function: linear;
+	animation-duration: 0.7s;
+	/*animation-fill-mode: forwards;*/
+}
+
+/*.extra_life {
+	opacity: 1;
+}*/
+
+#script {
+	display: inline;
+	position: absolute;
+	left: -8px;
+}
+
+@keyframes blink_life {
+	/*0% { transform: rotate(90deg);
+		 font-size: 21px; }
+	100% { transform: rotate(180deg); }*/
+	/*0% { opacity: 1; }*/
+	/*50% { opacity: 0; } */
+	/*0% { opacity: 0; } */
+	4% { opacity: 0; } 
+	16% { opacity: 1; } 
+	32% { opacity: 0; } 
+	48% { opacity: 1; } 
+	64% { opacity: 0; }
+	80% { opacity: 1; }
+	100% { opacity: 0; }
+}
+
+.skill_shell:nth-child(2n) .border_skill {
 	border-color: rgb(196, 0, 16);
 }
 
 .skill_banner {
 	line-height: 75px;
+	position: absolute;
+	transform: translateX(-50%);
+	left: 50%;
 }
 
 .inner_skills_container {
@@ -207,6 +267,7 @@ img.logo {
 	margin-right: 0;
 	margin-left: 0;
 	opacity: 0;
+	/*position: relative;*/
 }
 
 .fade_in {
@@ -270,7 +331,7 @@ img.logo {
 }
 
 .wordpress_button {
-	
+
 }
 
 
