--- a/css/index.css
+++ b/css/index.css
@@ -194,11 +194,11 @@ img.logo {
 }
 
 .skill_shell {
-	width: 33.333%;
+	width: 50%;
 	display: inline;
 	float: left;
-	margin-bottom: 20px;
-	margin-top: 20px;
+	margin: 20px auto;
+	/*-webkit-backface-visibility: hidden;*/
 	/*position: absolute;*/
 }
 
@@ -208,13 +208,13 @@ img.logo {
 	height: 75px;
 	width: 75px;
 	margin: 0 auto;
-	position: relative;
+	/*position: relative;*/
 }
 
 #java {
-	display: inline;
-	position: absolute;
-	right: 8px;
+	/*display: inline;*/
+	/*position: absolute;*/
+	/*right: 8px;*/
 	/*animation-name: rotate_java;
 	animation-timing-function: linear;
 	animation-duration: 5s;*/
@@ -241,9 +241,9 @@ img.logo {
 }*/
 
 #script {
-	display: inline;
-	position: absolute;
-	left: -8px;
+	/*display: inline;*/
+	/*position: absolute;*/
+	/*left: -8px;*/
 }
 
 @keyframes blink_life {
@@ -268,9 +268,9 @@ img.logo {
 
 .skill_banner {
 	line-height: 75px;
-	position: absolute;
-	transform: translateX(-50%);
-	left: 50%;
+	/*position: absolute;*/
+	/*transform: translateX(-50%);*/
+	/*left: 50%;*/
 }
 
 .inner_skills_container {
@@ -278,7 +278,17 @@ img.logo {
 	margin-right: 0;
 	margin-left: 0;
 	opacity: 0;
+	/*position: relative;*/
+}
+
+.skill_relative {
 	position: relative;
+}
+
+#javascript {
+	position: absolute;
+	transform: translateX(-50%);
+	left: 50%;
 }
 
 .fade_in {
@@ -288,7 +298,11 @@ img.logo {
 	animation-fill-mode: forwards;
 }
 
-.blackout {
+#css {
+	display: inline-block;
+}
+
+/*.blackout {
 	position: fixed;
     padding: 0;
     margin: 0;
@@ -304,15 +318,32 @@ img.logo {
 	animation-name: fade_in_darkness;
 	animation-timing-function: linear;
 	animation-duration: 5s;
-}
+}*/
 
 .css_trick {
-	animation-name: css_magic;
+	animation-name: css_spin;
 	animation-timing-function: linear;
-	animation-duration: 5s;
-	/*position: relative;*/
+	animation-duration: 2s;
 	opacity: 1;
-	z-index: 201;
+	/*transform: translateX(-50%);*/
+	/*-webkit-backface-visibility: hidden;*/
+	/*-webkit-transform: translateZ(0) scale(1.0, 1.0);*/
+	/*z-index: 201;*/
+}
+
+@keyframes css_spin {									
+	0% {
+		transform: rotate(0deg);
+	} 
+
+	50% {
+		font-size: 3.7em;
+		font-weight: 800;
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 @keyframes fade_in_darkness {
@@ -345,8 +376,15 @@ img.logo {
 }
 
 .wordpress_button {
-
+	width: ;
 }
+
+.popover {
+	width: 200px;
+	font-size: 1.5em;
+}
+
+
 
 
 /*@keyframes blackout_content {
