--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,13 +5,13 @@
 @media screen and (min-width: 535px) {
 	/*** Skills ***/
 	.border_skill {
-		width: 100px;
-		height: 100px;
+		/*width: 125px;
+		height: 125px;*/
 	}
 
 	.skill_banner {
-		line-height: 100px;
-		font-size: 1.1em;
+		/*line-height: 100px;
+		font-size: 1.1em;*/
 	}
 }
 
@@ -76,13 +76,17 @@
     }
 	/*** Skills ***/
 	.border_skill {
-		width: 125px;
-		height: 125px;
+		/*width: 125px;
+		height: 125px;*/
+	}
+
+	.skill_shell {
+		width: 33.333%;
 	}
 
 	.skill_banner {
-		line-height: 125px;
-		font-size: 1.2em;
+		/*line-height: 125px;
+		font-size: 1.2em;*/
 	}
 }
 
@@ -162,6 +166,35 @@
 		font-size: 1.4em;
 	}
 
+	@keyframes css_spin {									
+		0% {
+			transform: rotate(0deg);
+		} 
+
+		50% {
+			font-size: 4.0em;
+			font-weight: 800;
+		}
+
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+
+	.popover {
+		width: 150px;
+		font-size: 1.5rem;
+		/*font-family: 'Roboto', sans-serif;*/
+		/*font-weight: 800;*/
+		/*text-align: center;*/
+	}
+
+	.wordpress_button {
+		width: 62px;
+		margin-bottom: 5px;
+		margin-left: 3px;
+	}
+
 	/*** Contact ***/
 	.form-group label {
 		font-size: 1.6rem;
@@ -189,8 +222,8 @@
 
 	/*** About Me ***/
 	.main_image_div {
-		height: 200px;
-		width: 200px;
+		/*height: 200px;
+		width: 200px;*/
 	}
 
 	/*.real_me p {
@@ -205,6 +238,35 @@
 		width: 175px;
 		height: 175px;
 	}
+
+	.popover {
+		width: 175px;
+		font-size: 1.6rem;
+		/*font-family: 'Roboto', sans-serif;*/
+		/*font-weight: 800;*/
+		/*text-align: center;*/
+	}
+
+	.wordpress_button {
+		width: 75px;
+		margin-bottom: 5px;
+		margin-left: 4px;
+	}
+
+	@keyframes css_spin {									
+	0% {
+		transform: rotate(0deg);
+	} 
+
+	50% {
+		font-size: 4.3em;
+		font-weight: 800;
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
 
 	/*** Skills ***/
 	.skill_banner {
@@ -240,6 +302,35 @@
 		font-size: 1.8em;
 		line-height: 200px;
 	}
+
+	.popover {
+		width: 200px;
+		font-size: 1.7rem;
+		/*font-family: 'Roboto', sans-serif;*/
+		/*font-weight: 800;*/
+		/*text-align: center;*/
+	}
+
+	.wordpress_button {
+		width: 87px;
+		margin-bottom: 5px;
+		margin-left: 5px;
+	}
+
+	@keyframes css_spin {									
+	0% {
+		transform: rotate(0deg);
+	} 
+
+	50% {
+		font-size: 4.6em;
+		font-weight: 800;
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
 
 	/*** Portfolio Work ***/
 	/*.thumbnail_container {
@@ -288,16 +379,45 @@
 		padding: 0 18%;
 	}
 
+	/*** Skills ***/
 	.border_skill {
 		width: 225px;
 		height: 225px;
 	}
 
-	/*** Skills ***/
 	.skill_banner {
 		font-size: 2em;
 		line-height: 225px;
 	}
+
+	.popover {
+		width: 225px;
+		font-size: 1.8rem;
+		/*font-family: 'Roboto', sans-serif;*/
+		/*font-weight: 800;*/
+		/*text-align: center;*/
+	}
+
+	.wordpress_button {
+		width: 100px;
+		margin-bottom: 5px;
+		margin-left: 6px;
+	}
+
+	@keyframes css_spin {									
+	0% {
+		transform: rotate(0deg);
+	} 
+
+	50% {
+		font-size: 5.0em;
+		font-weight: 800;
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
 
 	/*** Portfolio Work ***/
 	/*.thumbnail_container {
