--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,6 +29,17 @@
 		font-size: 3.5rem;
 	}
 
+	i.fa.floating {
+		color: rgba(196, 0, 16, 0.15);
+		position: fixed;
+		display: inline-block;
+	}
+
+	i.fa.floating:nth-child(2n) {
+		color: #3967B1;
+		opacity: 0.15;
+	}
+
 	/*** Portfolio Work ***/
 	/*.thumbnail_container {
 		margin: 15px 35px;
